[package]
name = "motor-test"
version = "0.1.0"
authors = ["Yaneury Fermin <fermin.yaneury@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "motor-test"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
avr-device = "0.8.1"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "e5c8f37fe48419956e722490a82b9ca9b9fc61a2"
features = ["arduino-uno"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
